--- a/app/index.html
+++ b/app/index.html
@@ -4,15 +4,97 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <title>RENT-PULT.RU - система управления арендой</title>
+    <!-- favicon.ico -->
+    <link rel="apple-touch-icon" sizes="144x144" href="images/dest/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/dest/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/dest/favicon/favicon-16x16.png">
+    <!-- <link rel="manifest" href="images/dest/favicon/site.webmanifest"> -->
+    <link rel="mask-icon" href="images/dest/favicon/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
+    <!-- end favicon.ico -->
+    <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/app.min.css">
 </head>
 
 <body>
-    <h1>Hello, world!</h1>
-    <img src="images/dest/1.jpg" alt="Alt">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+    <div class="wrapper">
+        <!-- @@include('includes/header.html') -->
+        <nav class="navbar navbar-main navbar-expand-lg shadow">
+            <div class="container-xxl">
+                <a class="navbar-brand fw-bold text-uppercase" href="#">rent-pult.ru</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#navbarOffcanvasLg" aria-controls="navbarOffcanvasLg">
+                    <i class="bi bi-list"></i>
+                </button>
+                <div class="offcanvas offcanvas-main offcanvas-end" tabindex="-1" id="navbarOffcanvasLg" aria-labelledby="navbarOffcanvasLgLabel">
+                    <div class="offcanvas-header">
+                        <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Меню</h5>
+                        <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                    </div>
+                    <div class="offcanvas-body">
+                        <ul class="navbar-nav justify-content-end flex-grow-1">
+                            <li class="nav-item">
+                                <a class="nav-link active" href="/">О проекте</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link " href="#">Условия использования</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link " href="#">Контакты</a>
+                            </li>
+                        </ul>
+                        <ul class="navbar-nav justify-content-end flex-grow-1">
+                            <li class="nav-item">
+                                <a class="nav-link " href="authorization.html"><i class="bi bi-box-arrow-in-right me-2"></i>Войти / Регистрация</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </nav>
+        <header class="py-3 border-bottom border-warning">
+            <div class="header-main">
+                <div class="container-xl">
+                    <div class="row align-items-center justify-content-between">
+                        <div class="col-lg mb-3 mb-lg-0">
+                            <div class="d-flex align-items-center lex-column flex-sm-row justify-content-center justify-content-lg-start">
+                                <img src="images/dest/logo-ras.png" alt="Логотип" class="img-fluid">
+                                <h1 class="fs-4 ms-0 ms-sm-3 text-light text-center text-lg-start">
+                                    Система управления арендой
+                                </h1>
+                            </div>
+                        </div>
+                        <div class="col-sm col-lg-3 col-xl-2">
+                            <div class="contacts d-flex flex-column text-center">
+                                <a href="tel:+79265568904"><i class="bi bi-telephone me-2"></i>+7 (926) 556-89-04</a>
+                                <a href="mailto:arenda@rent-pult.ru"><i class="bi bi-envelope me-2"></i>arenda@rent-pult.ru</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </header>
+        <main>
+            <div class="container">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus aut, modi labore ad dolor, deserunt quam facilis ipsum laudantium provident nostrum quod alias ducimus. Aliquid ipsum minus magni ipsa delectus, et laborum nemo vel odit soluta blanditiis dicta earum architecto provident veniam consectetur id debitis molestiae amet excepturi eos! Delectus, reiciendis quidem molestiae libero. Illo repellat magni at iusto odio ea dolorem cum fugit est, error et modi recusandae aperiam quos vero corrupti nihil optio cumque distinctio fuga vitae, voluptate? Reprehenderit debitis iure est quia nihil facilis. Sed error unde impedit, accusantium voluptatem rem quibusdam asperiores, omnis, corrupti eaque laudantium?</p>
+            </div>
+        </main>
+        <footer class="mt-auto">
+            <div class="container">
+                <div class="py-3 my-4">
+                    <ul class="nav justify-content-center border-bottom border-warning pb-3 mb-3">
+                        <li class="nav-item"><a href="#" class="nav-link px-2">О проекте</a></li>
+                        <li class="nav-item"><a href="#" class="nav-link px-2">Условия использования</a></li>
+                        <li class="nav-item"><a href="#" class="nav-link px-2">Стоимость</a></li>
+                    </ul>
+                    <p class="text-center text-muted">© 2022, rent-pult.ru</p>
+                </div>
+            </div>
+        </footer>
+    </div>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script> -->
+    <script src="js/bootstrap.bundle.min.js"></script>
     <!-- Подключаем скрипты проекта -->
     <script src="js/app.min.js"></script>
 </body>
