add page profile

--- a/app/index.html
+++ b/app/index.html
@@ -78,7 +78,7 @@
         <main class="mb-5">
             <div class="container">
                 <nav aria-label="breadcrumb" class="text-sm mb-4">
-                    <ol class="breadcrumb">
+                    <ol class="breadcrumb breadcrumb-sm">
                         <li class="breadcrumb-item"><a href="#">Home</a></li>
                         <li class="breadcrumb-item active" aria-current="page">Library</li>
                     </ol>
