--- a/app/profile.html
+++ b/app/profile.html
@@ -67,7 +67,7 @@
         <header class="header-main py-3 mb-3">
             <div class="container">
                 <div class="row align-items-center justify-content-between">
-                    <div class="col-md mb-3 mb-lg-0">
+                    <div class="col-md mb-3 mb-lg-0 d-none d-sm-block">
                         <div class="d-flex align-items-center flex-column flex-sm-row justify-content-center justify-content-lg-start">
                             <img src="images/dest/logo-ras.png" alt="Логотип" class="img-fluid">
                             <h1 class="fs-2 ms-0 ms-sm-3 text-center text-lg-start">Система управления арендой</h1>
@@ -90,8 +90,9 @@
                         <li class="breadcrumb-item active" aria-current="page">Library</li>
                     </ol>
                 </nav>
-                <h1 class="fs-4 mb-4 pb-2 border-bottom">Личный кабинет</h1>
-                <div class="card card-main shadow-sm mb-4">
+                <h1 class="page-title">Личный кабинет</h1>
+                <h4 class="fw-bold text-secondary mb-3">Данные пользователя</h4>
+                <div class="card card-main text-bg-light shadow-sm mb-4">
                     <div class="card-header d-flex align-items-center justify-content-between py-3">
                         <div class="fs-5">
                             <span class="fw-light me-2">Логин в системе:</span>
@@ -100,114 +101,70 @@
                         <div class="text-success text-nowrap small">ID: 00001</div>
                     </div>
                     <div class="card-body">
-                        <h5 class="text-secondary fw-bold mb-3">Данные о пользователе</h5>
-                        <div class="btn btn-success"><i class="bi bi-plus me-1"></i>Добавить данные</div>
+                        <a href="#" class="btn btn-success" role="button" data-bs-toggle="modal" data-bs-target="#userInfo"><i class="bi bi-plus-lg me-1"></i>Добавить данные</a>
                     </div>
                 </div>
-                <h4 class="text-secondary fw-bold mb-3">Мои объекты</h4>
+                <h4 class="fw-bold text-secondary mb-3">Мои объекты</h4>
                 <div>
-                    <div class="card mb-3">
+                    <div class="card mb-4">
                         <div class="row g-0">
-                            <div class="col-md-2">
+                            <div class="col-md-3 text-center">
                                 <img src="images/dest/logo-black.png" class="img-fluid rounded-start" alt="plug">
                             </div>
                             <div class="col-md">
                                 <div class="card-body">
-                                    <h5 class="card-title">Card title</h5>
-                                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                                    <h4 class="card-title fw-light">Название объекта</h4>
+                                    <hr>
+                                    <div class="card-text d-flex flex-column flex-sm-row mb-2">
+                                        <span class="fw-bold me-2">Собственник:</span>
+                                        <span>Иванов Иван Иванович</span>
+                                    </div>
+                                    <div class="card-text d-flex flex-column flex-sm-row mb-2">
+                                        <span class="fw-bold me-2">Управляющий:</span>
+                                        <span>Петров Арсений Евгеньевич</span>
+                                    </div>
+                                    <div class="card-text d-flex flex-column flex-sm-row mb-2">
+                                        <span class="fw-bold me-2">Арендатор:</span>
+                                        <span>Миронов Лаврентий Валерьевич</span>
+                                    </div>
+                                    <hr>
+                                    <div class="d-flex flex-column flex-sm-row align-items-sm-center justify-content-between">
+                                        <div class="left-actions mb-3 mb-sm-0">
+                                            <div class="btn-group">
+                                                <button class="btn btn-outline-success dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                                    Действия
+                                                </button>
+                                                <ul class="dropdown-menu">
+                                                    <li><a class="dropdown-item small" href="#">Редактировать</a></li>
+                                                    <li>
+                                                        <hr class="dropdown-divider">
+                                                    </li>
+                                                    <li><a class="dropdown-item small" href="#">Добавить собственника</a></li>
+                                                    <li><a class="dropdown-item small" href="#">Назначить управляющего</a></li>
+                                                    <li><a class="dropdown-item small" href="#">Назначить арендатора</a></li>
+                                                    <li>
+                                                        <hr class="dropdown-divider">
+                                                    </li>
+                                                    <li><a class="dropdown-item small" href="#">Удалить</a></li>
+                                                </ul>
+                                            </div>
+                                            <button class="btn btn-outline-secondary position-relative">События
+                                                <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
+                                                    99+
+                                                    <span class="visually-hidden">unread messages</span>
+                                                </span>
+                                            </button>
+                                        </div>
+                                        <div class="right-actions">
+                                            <a href="#">Больше информации<i class="bi bi-chevron-down ms-1"></i></a>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
+                    <a href="#" class="btn btn-success" role="button"><i class="bi bi-plus-lg me-1"></i>Добавить объект</a>
                 </div>
-                <!-- 
-                <div class="row">
-                    <div class="col-lg-9 order-2 order-lg-1 py-4">
-                        <div class="card card-main shadow-sm">
-                            <div class="card-header fs-5 fw-light text-primary py-3">
-                                <span class="me-2">Логин в системе:</span>
-                                <span class="fw-normal">eroshenkov@gmail.com</span>
-                                <span class="text-success float-sm-end">
-                                    <small>ID: 00001</small>
-                                    <a class="btn btn-sm btn-outline-warning text-black ms-2" href="#" title="Копировать">
-                                        <i class="bi bi-clipboard-plus"></i>
-                                    </a>
-                                </span>
-                            </div>
-                            <div class="card-body">
-                                <form action="" method="post">
-                                    <div class="row justify-content-sm-center my-4">
-                                        <div class="col-sm-8">
-                                            <p class="form-label">Смена пароля</p>
-                                            <div class="row">
-                                                <div class="col mb-2 mb-sm-0">
-                                                    <input name="pass1" type="password" class="form-control" placeholder="Новый пароль" aria-label="New password">
-                                                </div>
-                                                <div class="col">
-                                                    <input name="pass2" type="password" class="form-control" placeholder="Повторите пароль" aria-label="Repeat password">
-                                                </div>
-                                                <div class="col-1">
-                                                    <button class="btn btn-warning disabled" title="Сохранить"><i class="bi bi-save"></i></button>
-                                                </div>
-                                            </div>
-                                            <div class="text-danger mt-1">
-                                                <small>Пароли не совпадают</small>
-                                            </div>
-                                            <div class="text-success mt-2">
-                                                <i class="bi bi-check2 me-1"></i>Пароль сохранен
-                                            </div>
-                                        </div>
-                                    </div>
-                                </form>
-                                <hr class="border-bottom border-warning" />
-                                <form method="post" action="">
-                                    <div class="row justify-content-sm-center my-4">
-                                        <div class="col-sm-8">
-                                            <div class="row mb-3">
-                                                <div class="col-10 col-sm-11">
-                                                    <label for="id_fio" class="form-label">ФИО</label>
-                                                    <input type="text" class="form-control" id="id_fio">
-                                                </div>
-                                                <div class="col-1 align-self-end">
-                                                    <button type="button" class="btn btn-link" title="Изменить"><i class="bi bi-pencil-square"></i></button>
-                                                </div>
-                                            </div>
-                                            <div class="row mb-3">
-                                                <div class="col-sm-5">
-                                                    <label for="id_birthday" class="form-label">Дата рождения</label>
-                                                    <input type="date" class="form-control" id="id_birthday">
-                                                </div>
-                                                <div class="col-1 align-self-end">
-                                                    <button type="button" class="btn btn-link" title="Изменить"><i class="bi bi-pencil-square"></i></button>
-                                                </div>
-                                            </div>
-                                            <div class="row mb-3">
-                                                <div class="col-sm-5">
-                                                    <label for="id_phone" class="form-label">Телефон</label>
-                                                    <input type="text" class="form-control" id="id_phone" readonly>
-                                                </div>
-                                                <div class="col-1 align-self-end">
-                                                    <button type="button" class="btn btn-link" title="Изменить"><i class="bi bi-pencil-square"></i></button>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <hr class="border-bottom border-warning" />
-                                    <button type="submit" class="btn btn-warning"><i class="bi bi-save me-1"></i>Сохранить</button>
-                                    <a href="#" class="btn btn-outline-secondary">Отмена</a>
-                                </form>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 order-1 order-lg-2 vertical-menu">
-                        <nav class="nav nav-right-main flex-row flex-lg-column">
-                            <a class="nav-link active" href="profile.html">Мой профиль</a>
-                            <a class="nav-link" href="#">Мои объекты</a>
-                        </nav>
-                    </div>
-                </div>
-                 -->
             </div>
         </main>
         <footer class="mt-auto">
@@ -222,6 +179,42 @@
                 </div>
             </div>
         </footer>
+    </div>
+    <!-- Modal -->
+    <div class="modal fade" id="userInfo" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Добавить данные</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <form action="">
+                    <div class="modal-body">
+                        <div class="mb-3">
+                            <label for="userFio" class="form-label">Фамилия Имя Отчество</label>
+                            <input type="text" class="form-control" id="userFio">
+                        </div>
+                        <div class="row">
+                            <div class="col-sm">
+                                <div class="mb-3">
+                                    <label for="userBirthday" class="form-label">Дата рождения</label>
+                                    <input type="date" class="form-control" id="userBirthday">
+                                </div>
+                            </div>
+                            <div class="col-sm">
+                                <div class="mb-3">
+                                    <label for="userBirthday" class="form-label">Телефон</label>
+                                    <input type="text" class="form-control" id="userBirthday">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-success">Сохранить</button>
+                    </div>
+                </form>
+            </div>
+        </div>
     </div>
     <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script> -->
     <script src="js/bootstrap.bundle.min.js"></script>
