add object profile info

--- a/app/user_profile.html
+++ b/app/user_profile.html
@@ -282,7 +282,7 @@
                         <div class="row g-0">
                             <div class="d-none d-xl-block col-xl-2 text-center">
                                 <a href="#">
-                                    <img src="images/dest/object1.jpg" class="img-fluid rounded-start" alt="квартира">
+                                    <img src="images/dest/object1.jpg" class="card-img-object rounded-start" alt="квартира">
                                 </a>
                             </div>
                             <div class="col-md">
@@ -295,7 +295,7 @@
                                         <div class="row align-items-center mb-1 mb-lg-0">
                                             <div class="col-lg-5">
                                                 <div class="card-text">
-                                                    <span class="text-secondary fw-bold me-2">Собственник:</span>
+                                                    <span class="text-secondary fw-bold me-2">Собственник 1:</span>
                                                     <span>Петров Арсений Евгеньевич</span>
                                                 </div>
                                             </div>
@@ -309,7 +309,7 @@
                                         <div class="row align-items-center mb-1 mb-lg-0">
                                             <div class="col-lg-5">
                                                 <div class="card-text">
-                                                    <span class="text-secondary fw-bold me-2">Собственник:</span>
+                                                    <span class="text-secondary fw-bold me-2">Собственник 2:</span>
                                                     <span>Петров Арсений Евгеньевич</span>
                                                 </div>
                                             </div>
@@ -323,7 +323,7 @@
                                         <div class="row align-items-center mb-1 mb-lg-0">
                                             <div class="col-lg-5">
                                                 <div class="card-text">
-                                                    <span class="text-secondary fw-bold me-2">Собственник:</span>
+                                                    <span class="text-secondary fw-bold me-2">Собственник 3:</span>
                                                     <span>Петров Арсений Евгеньевич</span>
                                                 </div>
                                             </div>
@@ -336,8 +336,8 @@
                                         </div>
                                         <div class="row align-items-center mb-1 mb-lg-0">
                                             <div class="col-lg-5">
-                                                <div class="card-text text-orange">
-                                                    <span class="text-secondary fw-bold me-2">Управляющий:</span>
+                                                <div class="card-text">
+                                                    <span class="text-secondary fw-bold me-2">Управляющий 1:</span>
                                                     <span>Иванов Иван Иванович</span>
                                                 </div>
                                             </div>
@@ -352,7 +352,7 @@
                                         <div class="row align-items-center mb-1 mb-lg-0">
                                             <div class="col-lg-5">
                                                 <div class="card-text text-orange">
-                                                    <span class="text-secondary fw-bold me-2">Управляющий:</span>
+                                                    <span class="text-secondary fw-bold me-2">Управляющий 2:</span>
                                                     <span>Иванов Иван Иванович</span>
                                                 </div>
                                             </div>
