--- a/app/object_profile.html
+++ b/app/object_profile.html
@@ -90,34 +90,35 @@
                     </ol>
                 </nav>
                 <h1 class="page-title">
-                    <div>Профиль объекта</div>
+                    <div>Название объекта</div>
                     <a href="user_profile.html" class="btn btn-outline-primary btn-sm mt-2 mt-sm-0"><i class="bi bi-arrow-left me-1"></i>Назад</a>
                 </h1>
                 <div class="row">
-                    <div class="col-lg-3 col-xl-2 sticky-lg-top">
-                        <!-- <div class="list-group list-group-flush flex-row flex-lg-column" id="list-tab" role="tablist">
-                            <a class="list-group-item list-group-item-action active" id="list-home-list" data-bs-toggle="list" href="#list-home" role="tab" aria-controls="list-home">Home</a>
-                            <a class="list-group-item list-group-item-action" id="list-profile-list" data-bs-toggle="list" href="#list-profile" role="tab" aria-controls="list-profile">Profile</a>
-                            <a class="list-group-item list-group-item-action" id="list-messages-list" data-bs-toggle="list" href="#list-messages" role="tab" aria-controls="list-messages">Messages</a>
-                            <a class="list-group-item list-group-item-action" id="list-settings-list" data-bs-toggle="list" href="#list-settings" role="tab" aria-controls="list-settings">Settings</a>
-                        </div> -->
-                        <nav class="navbar navbar-object navbar-expand-lg bg-light">
+                    <div class="col-lg-3 sticky-lg-top">
+                        <nav class="navbar-object navbar-expand-lg bg-light shadow-sm">
                             <div class="container">
-                                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarObject" aria-controls="navbarObject" aria-expanded="false" aria-label="Toggle navigation">
-                                    <i class="bi bi-three-dots-vertical fs-3"></i>
-                                    <span class="text-primary">Меню настроек</span>
-                                    <!-- <span class="navbar-toggler-icon"></span> -->
-                                </button>
+                                <a href="#" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarObject" aria-controls="navbarObject" aria-expanded="false" aria-label="Toggle navigation">
+                                    <span class="text-primary fs-3">Меню объекта</span>
+                                    <div>
+                                        <i class="bi bi-list text-primary fs-2"></i>
+                                    </div>
+                                </a>
                                 <div class="collapse navbar-collapse" id="navbarObject" role="tablist">
                                     <ul class="navbar-nav">
                                         <li class="nav-item">
-                                            <a class="nav-link active" href="#list-home" id="list-home-list" data-bs-toggle="list" role="tab" aria-controls="list-home">Home</a>
+                                            <a class="nav-link fs-5 active" href="#common-data" id="common-data-list" data-bs-toggle="list" role="tab" aria-controls="common-data">Общие данные</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="#list-profile" id="list-profile-list" data-bs-toggle="list" role="tab" aria-controls="list-profile">Features</a>
+                                            <a class="nav-link fs-5" href="#communal-services" id="communal-services-list" data-bs-toggle="list" role="tab" aria-controls="communal-services">ЖКХ</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="#list-messages" id="list-messages-list" data-bs-toggle="list" role="tab" aria-controls="list-messages">Pricing</a>
+                                            <a class="nav-link fs-5" href="#managers" id="managers-list" data-bs-toggle="list" role="tab" aria-controls="managers">Управляющие</a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link fs-5" href="#tenants" id="tenants-list" data-bs-toggle="list" role="tab" aria-controls="tenants">Арендаторы</a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link fs-5" href="#notification-settings" id="notification-settings-list" data-bs-toggle="list" role="tab" aria-controls="notification-settings">Настройка уведомлений</a>
                                         </li>
                                     </ul>
                                 </div>
@@ -126,9 +127,115 @@
                     </div>
                     <div class="col-lg">
                         <div class="tab-content" id="nav-tabContent">
-                            <div class="tab-pane fade show active" id="list-home" role="tabpanel" aria-labelledby="list-home-list">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla facere aliquam necessitatibus quasi ab velit, dolorum dignissimos voluptas, eveniet amet numquam esse voluptatibus excepturi laudantium assumenda officia laboriosam labore nemo?</div>
-                            <div class="tab-pane fade" id="list-profile" role="tabpanel" aria-labelledby="list-profile-list">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ducimus quasi rerum, vitae minus blanditiis consequatur dicta, repellat, culpa error voluptas, similique tenetur aperiam ipsam accusantium est. Est, itaque. Repudiandae, ullam!</div>
-                            <div class="tab-pane fade" id="list-messages" role="tabpanel" aria-labelledby="list-messages-list">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minima quibusdam, debitis repudiandae eos labore voluptatum quis, illo recusandae eum, atque quasi beatae ratione nemo qui! Nam cumque blanditiis voluptates enim.</div>
+                            <div class="tab-pane fade show active" id="common-data" role="tabpanel" aria-labelledby="common-data-list">
+                                <div class="card card-object border-0 shadow-sm">
+                                    <div class="card-header bg-light d-flex flex-wrap align-items-center justify-content-between py-3">
+                                        <div class="fw-light fs-4">Общие данные</div>
+                                        <div class="text-success text-nowrap">ID: 00001-01</div>
+                                    </div>
+                                    <div class="card-body">
+                                        <form action="">
+                                            <fieldset class="py-3">
+                                                <div class="row mb-3">
+                                                    <label for="" class="col-md-4 col-form-label fw-semibold">Название объекта<span class="text-danger ms-1">*</span></label>
+                                                    <div class="col-sm col-xl-6">
+                                                        <input type="text" class="form-control" id="" required>
+                                                    </div>
+                                                </div>
+                                                <div class="row mb-3">
+                                                    <label for="" class="col-md-4 col-form-label">Адрес объекта</label>
+                                                    <div class="col-sm col-xl-6">
+                                                        <input type="text" class="form-control" id="">
+                                                    </div>
+                                                </div>
+                                                <div class="row mb-3">
+                                                    <label for="" class="col-md-4 col-form-label">Этаж / подъезд</label>
+                                                    <div class="col-sm col-xl-3 mb-3 mb-sm-0">
+                                                        <input type="number" class="form-control" id="" placeholder="№ этажа">
+                                                    </div>
+                                                    <div class="col-sm col-xl-3">
+                                                        <input type="number" class="form-control" id="" placeholder="№ подъезда">
+                                                    </div>
+                                                </div>
+                                                <div class="row mb-3">
+                                                    <label for="" class="col-md-4 col-form-label">Кол-во комнат / площадь</label>
+                                                    <div class="col-sm col-xl-3 mb-3 mb-sm-0">
+                                                        <input type="number" class="form-control" id="">
+                                                    </div>
+                                                    <div class="col-sm col-xl-3">
+                                                        <input type="number" class="form-control" id="">
+                                                    </div>
+                                                </div>
+                                                <div class="row mb-3">
+                                                    <label for="" class="col-md-4 col-form-label">Сан.узел / балкон</label>
+                                                    <div class="col-sm col-xl-3 mb-3 mb-sm-0">
+                                                        <select class="form-select" aria-label="Default select example">
+                                                            <option selected>-</option>
+                                                            <option value="1">раздельный</option>
+                                                            <option value="2">совмещенный</option>
+                                                        </select>
+                                                    </div>
+                                                    <div class="col-sm col-xl-3">
+                                                        <select class="form-select" aria-label="Default select example">
+                                                            <option selected>-</option>
+                                                            <option value="1">балкон</option>
+                                                            <option value="2">лоджия</option>
+                                                            <option value="3">нет</option>
+                                                        </select>
+                                                    </div>
+                                                </div>
+                                                <div class="row mb-3">
+                                                    <label for="" class="col-md-4 col-form-label">Сан.узел / балкон</label>
+                                                    <div class="col-sm col-xl-3 mb-3 mb-sm-0">
+                                                        <select class="form-select" aria-label="Default select example">
+                                                            <option selected>-</option>
+                                                            <option value="1">раздельный</option>
+                                                            <option value="2">совмещенный</option>
+                                                        </select>
+                                                    </div>
+                                                    <div class="col-sm col-xl-3">
+                                                        <select class="form-select" aria-label="Default select example">
+                                                            <option selected>-</option>
+                                                            <option value="1">балкон</option>
+                                                            <option value="2">лоджия</option>
+                                                            <option value="3">нет</option>
+                                                        </select>
+                                                    </div>
+                                                </div>
+                                                <hr>
+                                                <div class="row mb-3 align-items-center">
+                                                    <label for="" class="col-md-4 col-form-label">Фото объекта 1</label>
+                                                    <div class="col-10 col-sm-7 col-xl-6">
+                                                        <input class="form-control" type="file" id="formFile">
+                                                    </div>
+                                                    <div class="col">
+                                                        <a href="#" class="btn btn-outline-danger btn-sm"><i class="bi bi-x-lg"></i></a>
+                                                    </div>
+                                                </div>
+                                            </fieldset>
+                                            <button class="btn btn-primary"><i class="bi bi-save me-1"></i>Сохранить</button>
+                                            <button class="btn btn-outline-primary"><i class="bi bi-pencil me-1"></i>Редактировть</button>
+                                        </form>
+                                        <!-- <div class="row">
+                                            <div class="col-lg">
+                                                <a href="#" class="btn btn-outline-success" role="button" data-bs-toggle="modal" data-bs-target="#modalUserInfo"><i class="bi bi-pencil me-1"></i>Изменить данные</a>
+                                            </div>
+                                        </div> -->
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="tab-pane fade" id="communal-services" role="tabpanel" aria-labelledby="communal-services-list">
+                                2
+                            </div>
+                            <div class="tab-pane fade" id="managers" role="tabpanel" aria-labelledby="managers-list">
+                                3
+                            </div>
+                            <div class="tab-pane fade" id="tenants" role="tabpanel" aria-labelledby="tenants-list">
+                                4
+                            </div>
+                            <div class="tab-pane fade" id="notification-settings" role="tabpanel" aria-labelledby="notification-settings-list">
+                                5
+                            </div>
                         </div>
                     </div>
                 </div>
