--- a/app/user_profile.html
+++ b/app/user_profile.html
@@ -41,7 +41,16 @@
                                 <a class="nav-link" href="index.html">Главная</a>
                             </li>
                             <li class="nav-item">
+                                <a class="nav-link" href="#">Квартиры</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Управление квартирами</a>
+                            </li>
+                            <li class="nav-item">
                                 <a class="nav-link" href="about.html">О системе</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Блог</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="contacts.html">Контакты</a>
