--- a/app/user_profile.html
+++ b/app/user_profile.html
@@ -98,7 +98,7 @@
                     </ol>
                 </nav>
                 <h1 class="page-title">
-                    <div>Профиль пользователя</div>
+                    <div>Личный кабинет</div>
                     <a href="#" class="btn btn-outline-primary btn-sm mt-2 mt-sm-0"><i class="bi bi-arrow-left me-1"></i>Назад</a>
                 </h1>
                 <!-- <h4 class="fw-bold text-secondary mb-3">Данные пользователя</h4> -->
