--- a/app/index.html
+++ b/app/index.html
@@ -63,8 +63,8 @@
                 </div>
             </div>
         </nav>
-        <!-- @@include('includes/header.html', {}) -->
-        <header class="header-main py-3 mb-3">
+        @@include('./includes/header.html', {})
+        <!-- <header class="header-main py-3 mb-3">
             <div class="container">
                 <div class="row align-items-center justify-content-between">
                     <div class="col-md mb-3 mb-lg-0">
@@ -81,7 +81,7 @@
                     </div>
                 </div>
             </div>
-        </header>
+        </header> -->
         <main class="mb-5">
             <div class="container">
                 <nav aria-label="breadcrumb" class="text-sm mb-4">
